# MSGPACK-C

./: .gitignore  CMakeLists.txt  README.md
include/msgpack/: msgpack.h
src/: msgpack.c  msgpack_reader.c
tests/: example.c  test_comprehensive.c  test_msgpack.c
